@@ -26,12 +26,15 @@ package pt.unl.fct.miei.usmanagement.manager.services.services.discovery.registr
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import pt.unl.fct.miei.usmanagement.manager.Mode;
 import pt.unl.fct.miei.usmanagement.manager.config.ManagerServicesConfiguration;
 import pt.unl.fct.miei.usmanagement.manager.containers.Container;
+import pt.unl.fct.miei.usmanagement.manager.containers.ContainerConstants;
 import pt.unl.fct.miei.usmanagement.manager.exceptions.EntityNotFoundException;
 import pt.unl.fct.miei.usmanagement.manager.hosts.HostAddress;
+import pt.unl.fct.miei.usmanagement.manager.kafka.KafkaBroker;
 import pt.unl.fct.miei.usmanagement.manager.regions.RegionEnum;
 import pt.unl.fct.miei.usmanagement.manager.registrationservers.RegistrationServer;
 import pt.unl.fct.miei.usmanagement.manager.registrationservers.RegistrationServers;
@@ -52,118 +55,115 @@ import java.util.stream.Collectors;
 @Service
 public class RegistrationServerService {
 
-	private final ContainersService containersService;
-	private final ElasticIpsService elasticIpsService;
-	private final HostsService hostsService;
-	private final ManagerServicesConfiguration managerServicesConfiguration;
+    private final ContainersService containersService;
+    private final ElasticIpsService elasticIpsService;
+    private final HostsService hostsService;
+    private final ManagerServicesConfiguration managerServicesConfiguration;
 
-	private final RegistrationServers registrationServers;
+    private final RegistrationServers registrationServers;
 
-	private final int port;
+    private final int port;
 
-	public RegistrationServerService(@Lazy ContainersService containersService, ElasticIpsService elasticIpsService,
-									 HostsService hostsService, ManagerServicesConfiguration managerServicesConfiguration,
-									 RegistrationServers registrationServers, RegistrationProperties registrationProperties) {
-		this.containersService = containersService;
-		this.elasticIpsService = elasticIpsService;
-		this.hostsService = hostsService;
-		this.managerServicesConfiguration = managerServicesConfiguration;
-		this.registrationServers = registrationServers;
-		this.port = registrationProperties.getPort();
-	}
+    public RegistrationServerService(@Lazy ContainersService containersService, ElasticIpsService elasticIpsService,
+                                     HostsService hostsService, ManagerServicesConfiguration managerServicesConfiguration,
+                                     RegistrationServers registrationServers, RegistrationProperties registrationProperties) {
+        this.containersService = containersService;
+        this.elasticIpsService = elasticIpsService;
+        this.hostsService = hostsService;
+        this.managerServicesConfiguration = managerServicesConfiguration;
+        this.registrationServers = registrationServers;
+        this.port = registrationProperties.getPort();
+    }
 
-	public RegistrationServer launchRegistrationServer(RegionEnum region) {
-		return launchRegistrationServers(List.of(region)).get(0);
-	}
+    public RegistrationServer launchRegistrationServer(RegionEnum region) {
+        return launchRegistrationServers(List.of(region)).get(0);
+    }
 
-	public CompletableFuture<RegistrationServer> launchRegistrationServer(HostAddress hostAddress) {
-		String registrationServerAddresses = getRegistrationServerAddresses();
-		Map<String, String> dynamicLaunchParams = Map.of("${zone}", registrationServerAddresses);
-		Container container = containersService.launchContainer(hostAddress, ServiceConstants.Name.REGISTRATION_SERVER,
-			Collections.emptyList(), Collections.emptyMap(), dynamicLaunchParams);
-		return CompletableFuture.completedFuture(saveRegistrationServer(container));
-	}
+    public RegistrationServer launchRegistrationServer(HostAddress hostAddress) {
+        String registrationServerAddresses = getRegistrationServerAddresses();
+        Map<String, String> dynamicLaunchParams = Map.of("${zone}", registrationServerAddresses);
+        Container container = containersService.launchContainer(hostAddress, ServiceConstants.Name.REGISTRATION_SERVER,
+                Collections.emptyList(), Collections.emptyMap(), dynamicLaunchParams);
+        return saveRegistrationServer(container);
+    }
 
-	public List<RegistrationServer> launchRegistrationServers(List<RegionEnum> regions) {
-		log.info("Launching registration servers at regions {}", regions);
+    public List<RegistrationServer> launchRegistrationServers(List<RegionEnum> regions) {
+        log.info("Launching registration servers at regions {}", regions);
 
-		List<CompletableFuture<RegistrationServer>> futureRegistrationServers = regions.stream().map(region -> {
-			List<RegistrationServer> regionRegistrationServers = getRegistrationServer(region);
-			if (regionRegistrationServers.size() > 0) {
-				return CompletableFuture.completedFuture(regionRegistrationServers.get(0));
-			}
-			else {
-				HostAddress hostAddress = managerServicesConfiguration.getMode() == Mode.LOCAL
-					? hostsService.getManagerHostAddress()
-					: elasticIpsService.getHost(region);
-				return launchRegistrationServer(hostAddress);
-			}
-		}).collect(Collectors.toList());
+        List<RegistrationServer> registrationServers = new ArrayList<>();
 
-		CompletableFuture.allOf(futureRegistrationServers.toArray(new CompletableFuture[0])).join();
+        CompletableFuture<?>[] requests = new CompletableFuture[regions.size()];
+        int count = 0;
+        for (RegionEnum region : regions) {
+            List<RegistrationServer> regionRegistrationServers = getRegistrationServer(region);
+            if (regionRegistrationServers.size() > 0) {
+                registrationServers.addAll(regionRegistrationServers);
+            } else {
+                HostAddress hostAddress = managerServicesConfiguration.getMode() == Mode.LOCAL
+                        ? hostsService.getManagerHostAddress()
+                        : elasticIpsService.getHost(region);
+                requests[count++] = CompletableFuture.supplyAsync(() -> launchRegistrationServer(hostAddress))
+                        .thenAccept(registrationServers::add);
+            }
+        }
+        CompletableFuture.allOf(requests).join();
 
-		List<RegistrationServer> registrationServers = new ArrayList<>();
-		for (CompletableFuture<RegistrationServer> futureRegistrationServer : futureRegistrationServers) {
-			RegistrationServer registrationServer = futureRegistrationServer.join();
-			registrationServers.add(registrationServer);
-		}
+        return registrationServers;
+    }
 
-		return registrationServers;
-	}
+    public List<RegistrationServer> getRegistrationServers() {
+        return registrationServers.findAll();
+    }
 
-	public List<RegistrationServer> getRegistrationServers() {
-		return registrationServers.findAll();
-	}
+    private List<RegistrationServer> getRegistrationServer(RegionEnum region) {
+        return registrationServers.getByRegion(region);
+    }
 
-	private List<RegistrationServer> getRegistrationServer(RegionEnum region) {
-		return registrationServers.getByRegion(region);
-	}
+    public RegistrationServer getRegistrationServer(String id) {
+        return registrationServers.findById(id).orElseThrow(() ->
+                new EntityNotFoundException(RegistrationServer.class, "id", id));
+    }
 
-	public RegistrationServer getRegistrationServer(String id) {
-		return registrationServers.findById(id).orElseThrow(() ->
-			new EntityNotFoundException(RegistrationServer.class, "id", id));
-	}
+    public RegistrationServer getRegistrationServerByContainer(Container container) {
+        return registrationServers.getByContainer(container).orElseThrow(() ->
+                new EntityNotFoundException(RegistrationServer.class, "containerEntity", container.getId()));
+    }
 
-	public RegistrationServer getRegistrationServerByContainer(Container container) {
-		return registrationServers.getByContainer(container).orElseThrow(() ->
-			new EntityNotFoundException(RegistrationServer.class, "containerEntity", container.getId()));
-	}
+    private String getRegistrationServerAddresses() {
+        return elasticIpsService.getElasticIps().stream()
+                .map(address -> String.format("http://%s:%s/eureka", address.getPublicIp(), port))
+                .collect(Collectors.joining(","));
+    }
 
-	private String getRegistrationServerAddresses() {
-		return elasticIpsService.getElasticIps().stream()
-			.map(address -> String.format("http://%s:%s/eureka", address.getPublicIp(), port))
-			.collect(Collectors.joining(","));
-	}
+    public Optional<String> getRegistrationServerAddress(RegionEnum region) {
+        return getRegistrationServer(region)
+                .stream()
+                .map(registrationServer -> registrationServer.getContainer().getAddress())
+                .findFirst();
+    }
 
-	public Optional<String> getRegistrationServerAddress(RegionEnum region) {
-		return getRegistrationServer(region)
-			.stream()
-			.map(registrationServer -> registrationServer.getContainer().getAddress())
-			.findFirst();
-	}
+    public void stopRegistrationServer(String id) {
+        RegistrationServer registrationServer = getRegistrationServer(id);
+        String containerId = registrationServer.getContainer().getId();
+        registrationServers.delete(registrationServer);
+        containersService.stopContainer(containerId);
+    }
 
-	public void stopRegistrationServer(String id) {
-		RegistrationServer registrationServer = getRegistrationServer(id);
-		String containerId = registrationServer.getContainer().getId();
-		registrationServers.delete(registrationServer);
-		containersService.stopContainer(containerId);
-	}
+    public void reset() {
+        registrationServers.deleteAll();
+    }
 
-	public void reset() {
-		registrationServers.deleteAll();
-	}
+    public void deleteRegistrationServerByContainer(Container container) {
+        RegistrationServer registrationServer = getRegistrationServerByContainer(container);
+        registrationServers.delete(registrationServer);
+    }
 
-	public void deleteRegistrationServerByContainer(Container container) {
-		RegistrationServer registrationServer = getRegistrationServerByContainer(container);
-		registrationServers.delete(registrationServer);
-	}
+    public RegistrationServer saveRegistrationServer(Container container) {
+        return registrationServers.getByContainer(container).orElseGet(() ->
+                registrationServers.save(RegistrationServer.builder().container(container).region(container.getRegion()).build()));
+    }
 
-	public RegistrationServer saveRegistrationServer(Container container) {
-		return registrationServers.getByContainer(container).orElseGet(() ->
-			registrationServers.save(RegistrationServer.builder().container(container).region(container.getRegion()).build()));
-	}
-
-	public boolean hasRegistrationServer(Container container) {
-		return registrationServers.hasRegistrationServerByContainer(container.getId());
-	}
+    public boolean hasRegistrationServer(Container container) {
+        return registrationServers.hasRegistrationServerByContainer(container.getId());
+    }
 }
